Add Maven Central badge to README

--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,8 @@
 = Gradle Plugin Utilities
+:version: 0.2.1
+:groupId: org.unbroken-dome.gradle-plugin-utils
+:artifactId: gradle-plugin-utils-bom
+
+image:https://img.shields.io/maven-central/v/{groupId}/{artifactId}[link=https://search.maven.org/artifact/{groupId}/{artifactId}/{version}/bundle]
 
 A collection of utilities that are useful when developing Gradle plugins.
